--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Client for Olza Logistic system API",
     "version": "0.9.0",
     "keywords": ["Olza", "OlzaLogistic", "API client", "Olza API client", "DevelArt"],
-    "license": "free to use or extend",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "OlzaApiClient\\": "src/"
