--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "develart-projects/olza-logisctic-api-client",
     "description": "Client for Olza Logistic system API",
-    "version": "1.5.0",
+    "version": "1.5.1",
     "keywords": ["Olza", "OlzaLogistic", "API client", "Olza API client", "DevelArt"],
     "license": "MIT",
     "autoload": {
@@ -12,7 +12,7 @@
     "authors": [
         {
             "name": "DevelArt",
-            "homepage": "https://www.develart.de/"
+            "homepage": "https://www.develart.cz/"
         }
     ],  
     "require" : {
