Added unit tests for ApiBatchResponse Response Entity + some improvements

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,6 @@
         "phpunit/phpunit": "7.5.20"
     },
     "scripts": {
-        "test": "vendor/bin/phpunit --testdox tests"
+        "test": "vendor/bin/phpunit --verbose --testdox tests"
     }
 }
