Added unit tests for Exceptions

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "OlzaApiClient\\": "src/"
+            "OlzaApiClient\\": "src/",
+            "Test\\": "tests/"
         }
     },
     "authors": [
